# simplepush-rs

./: Cargo.toml  LICENCE  README.md  release-plz.toml
.github/workflows/: build.yml  release.yml
src/: lib.rs
