[package]
name = "simplepush-rs"
description = "Client for the simplepush.io API"
version = "0.1.1"
edition = "2021"
authors = ["Jason Fagan"]
readme = "README.md"
homepage = "https://github.com/jasonfagan/simplepush-rs"
repository = "https://github.com/jasonfagan/simplepush-rs.git"
license = "MIT"
documentation = "https://docs.rs/simplepush"
categories = ["web-programming::http-client"]
keywords = ["simplepush", "notification"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = "0.22.1"
rand = "0.8.3"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"